--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>2+ years <br />Web Development</p>
             </div>
             <div class="details-container">
               <img
@@ -120,7 +120,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Web Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -257,22 +257,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/inventory.png"
+                src="./assets/5977585.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">E-commerce website for cloth shop</h2>
+            <h2 class="experience-sub-title project-title">IMDB Movie Rating app clone</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/faijal-ali/imdb-clone'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://faijal-ali.github.io/imdb-clone/'"
               >
                 Live Demo
               </button>
@@ -290,13 +290,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/faijal-ali/weather_app'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://faijal-ali.github.io/weather_app/'"
               >
                 Live Demo
               </button>
@@ -310,17 +310,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">TicToe Game</h2>
+            <h2 class="experience-sub-title project-title">Landing page</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/faijal-ali/landing_page'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://faijal-ali.github.io/landing_page/'"
               >
                 Live Demo
               </button>
